The rust flags are no longer needed to import Z3?

--- a/.cargo/config-macos-dev.toml
+++ b/.cargo/config-macos-dev.toml
@@ -1,3 +1,6 @@
 [env]
 Z3_SYS_Z3_HEADER="/opt/homebrew/include/z3.h"
-RUSTFLAGS="-C link-args=-L/opt/homebrew/lib"
+#RUSTFLAGS="-C link-args=-L/opt/homebrew/lib"
+
+#[build]
+#rustflags=["-C link-args=-L/opt/homebrew/lib"]
