--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ either = "1.13.0"
 # this to change because it might break our release builds.
 z3="^0.12.1"
 z3-sys = "^0.8.1"
+thiserror = "2.0.11"
 
 [build-dependencies]
 pyo3-build-config = "0.23.2"
