--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ either = "1.13.0"
 z3="^0.12.1"
 z3-sys = "^0.8.1"
 thiserror = "2.0.11"
+log = "0.4.22"
 
 [build-dependencies]
 pyo3-build-config = "0.23.2"
