--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "biodivine-aeon-py"
-version = "1.3.0-alpha2"
+version = "1.3.0-alpha3"
 edition = "2021"
 
 [lib]
@@ -23,6 +23,7 @@ biodivine-lib-bdd = "0.5.22"
 #biodivine-pbn-control = "0.3.1"
 biodivine-pbn-control = { git = "https://github.com/sybila/biodivine-pbn-control", rev = "d1a66a5f1b2922198fcec10369f432d0046a00df" }
 biodivine-hctl-model-checker = "0.3.0"
+# TODO: We can't update rand until we also update rand inside `lib-bdd`.
 rand = "0.8.5"
 macros = { path = "macros" }
 zip = "2.2.2"
