--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,9 @@ zip = "2.1.3"
 num-bigint = "0.4.6"
 num-traits = "0.2.19"
 either = "1.13.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+reqwest = { version = "0.12.15", default-features = false, features = ["blocking", "rustls-tls"] }
 
 # Include Z3 dependencies as strictly as possible, we don't want
 # this to change because it might break our release builds.
