build: Update `maturin`, `pyO3` and other minor dependencies.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,25 +17,25 @@ crate-type = ["cdylib", "rlib"]
 static-z3 = ["z3/static-link-z3"]
 
 [dependencies]
-pyo3 = { version = "0.25.1", features = ["abi3-py37", "extension-module", "num-bigint", "py-clone"] }
+pyo3 = { version = "0.26.0", features = ["abi3-py37", "extension-module", "num-bigint", "py-clone"] }
 biodivine-lib-param-bn = { version="0.5.13", features=["solver-z3"] }
 biodivine-lib-bdd = "0.5.22"
 #biodivine-pbn-control = "0.3.1"
 biodivine-pbn-control = { git = "https://github.com/sybila/biodivine-pbn-control", rev = "d1a66a5f1b2922198fcec10369f432d0046a00df" }
 biodivine-hctl-model-checker = "0.3.0"
-# Needs to be updated in dependencies first...
-rand = "0.8.5"
+# Cannot update `rand` because lib-bdd uses it to generate random big-int values.
+rand = "0.8"
 macros = { path = "macros" }
-zip = "4.3.0"
-num-bigint = "0.4.6"
-num-traits = "0.2.19"
-either = "1.13.0"
+zip = "5.1.1"
+num-bigint = "0.4"
+num-traits = "0.2"
+either = "1.15"
 
 # Include Z3 dependencies as strictly as possible, we don't want
 # this to change because it might break our release builds.
-# Needs to be updated in dependencies first...
+# Cannot update `z3` because this version is used by lib-param-bn.
 z3="^0.12.1"
 z3-sys = "^0.8.1"
 
 [build-dependencies]
-pyo3-build-config = "0.25.1"
+pyo3-build-config = "0.26.0"
