--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ static-z3 = ["z3/static-link-z3"]
 [dependencies]
 pyo3 = { version = "0.26.0", features = ["abi3-py37", "extension-module", "num-bigint", "py-clone"] }
 biodivine-lib-param-bn = { version="0.6.2", features=["solver-z3"] }
-biodivine-lib-bdd = "0.6.1"
+biodivine-lib-bdd = "0.6.2"
 #biodivine-pbn-control = "0.3.1"
 biodivine-pbn-control = { git = "https://github.com/sybila/biodivine-pbn-control", rev = "efacdb66f84d5d3849df2082c62e7585fc56eeee" }
 biodivine-hctl-model-checker = "0.3.4"
@@ -29,6 +29,7 @@ macros = { path = "macros" }
 zip = "5.1.1"
 num-bigint = "0.4"
 num-traits = "0.2"
+num-rational = "0.4"
 either = "1.15"
 
 # Include Z3 dependencies as strictly as possible, we don't want
