--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ biodivine-lib-bdd = "0.6.2"
 #biodivine-pbn-control = "0.3.1"
 biodivine-pbn-control = { git = "https://github.com/sybila/biodivine-pbn-control", rev = "efacdb66f84d5d3849df2082c62e7585fc56eeee" }
 biodivine-hctl-model-checker = "0.3.4"
+biodivine-lib-io-bma = "0.1.2"
 # Cannot update `rand` because lib-bdd uses it to generate random big-int values.
 rand = "0.8"
 macros = { path = "macros" }
