--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ crate-type = ["cdylib", "rlib"]
 # you don't need it as long as you have Z3 installed (because your
 # build may take >30min if you enable it).
 static-z3 = ["z3/static-link-z3"]
+algorithms-pyo3-bindings = []  # Feature flag for Python bindings for the algorithms module
 
 [dependencies]
 pyo3 = { version = "0.26.0", features = ["abi3-py37", "extension-module", "num-bigint", "py-clone"] }
@@ -37,6 +38,11 @@ either = "1.15"
 # Cannot update `z3` because this version is used by lib-param-bn.
 z3="^0.18.2"
 z3-sys = "^0.9.10"
+
+thiserror = "2.0.11"
+log = "0.4.22"
+dyn-clone = "1.0.18"
+pyo3-log = "0.12.1"
 
 [build-dependencies]
 pyo3-build-config = "0.26.0"
