--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -227,7 +227,7 @@ jobs:
           rustup component add llvm-tools-preview
           cargo install cargo-llvm-cov
           python3 -m venv venv
-          ./venv/bin/pip3 install -r dev-requirements.txt
+          ./venv/bin/pip3 install --no-cache-dir -r dev-requirements.txt
       - name: Run tests with coverage.
         run: |
           source ./venv/bin/activate
