--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,9 +28,11 @@ biodivine-lib-bdd = "0.6.2"
 biodivine-pbn-control = { git = "https://github.com/sybila/biodivine-pbn-control", rev = "9e31bab9d000266ea25c35cc752c69077973d43c" }
 biodivine-hctl-model-checker = "0.3.4"
 biodivine-lib-io-bma = "0.1.2"
+biodivine-algo-bdd-scc = { path = "../biodivine-algo-bdd-scc" }
 # Cannot update `rand` because lib-bdd uses it to generate random big-int values.
 rand = "0.8"
 cancel-this = { version = "0.4.0", features = ["pyo3"] }
+computation-process = "0.2.0"
 zip = "7.0"
 num-bigint = "0.4"
 num-traits = "0.2"
