--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,12 @@ edition = "2024"
 name = "biodivine_aeon"
 crate-type = ["cdylib", "rlib"]
 
+[profile.release]
+lto = true
+
 [features]
 default = ['algorithms-pyo3-bindings']
-# For releases, we want to include Z3 statically, so that users
+# For releases, we want to include Z3 statically so that users
 # don't have to install it (or break compatibility with new versions).
 # So for CI builds, this feature is enabled, but for local builds,
 # you don't need it as long as you have Z3 installed (because your
