--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,12 @@ edition = "2024"
 name = "biodivine_aeon"
 crate-type = ["cdylib", "rlib"]
 
+[profile.release]
+lto = true
+
 [features]
 default = ['algorithms-pyo3-bindings']
-# For releases, we want to include Z3 statically, so that users
+# For releases, we want to include Z3 statically so that users
 # don't have to install it (or break compatibility with new versions).
 # So for CI builds, this feature is enabled, but for local builds,
 # you don't need it as long as you have Z3 installed (because your
@@ -20,17 +23,20 @@ static-z3 = ["z3/static-link-z3"]
 algorithms-pyo3-bindings = []
 
 [dependencies]
-pyo3 = { version = "0.26.0", features = ["abi3-py37", "extension-module", "num-bigint", "py-clone"] }
-biodivine-lib-param-bn = { version="0.6.2", features=["solver-z3"] }
+macros = { path = "macros" }
+pyo3 = { version = "0.27", features = ["abi3-py37", "extension-module", "num-bigint", "py-clone"] }
+biodivine-lib-param-bn = { version="0.7.0", features=["solver-z3"] }
 biodivine-lib-bdd = "0.6.2"
 #biodivine-pbn-control = "0.3.1"
-biodivine-pbn-control = { git = "https://github.com/sybila/biodivine-pbn-control", rev = "efacdb66f84d5d3849df2082c62e7585fc56eeee" }
+biodivine-pbn-control = { git = "https://github.com/sybila/biodivine-pbn-control", rev = "9e31bab9d000266ea25c35cc752c69077973d43c" }
 biodivine-hctl-model-checker = "0.3.4"
 biodivine-lib-io-bma = "0.1.2"
+biodivine-algo-bdd-scc = "0.3.1"
 # Cannot update `rand` because lib-bdd uses it to generate random big-int values.
 rand = "0.8"
-macros = { path = "macros" }
-zip = "5.1.1"
+cancel-this = { version = "0.4.0", features = ["pyo3"] }
+computation-process = "0.2.0"
+zip = "7.0"
 num-bigint = "0.4"
 num-traits = "0.2"
 either = "1.15"
@@ -45,4 +51,4 @@ pyo3-log = "0.13"
 z3="^0.18.2"
 
 [build-dependencies]
-pyo3-build-config = "0.26.0"
+pyo3-build-config = "0.27"
