--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,9 @@ algorithms-pyo3-bindings = []
 
 [dependencies]
 macros = { path = "macros" }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+regex = "1.12"
 pyo3 = { version = "0.27", features = ["abi3-py37", "extension-module", "num-bigint", "py-clone"] }
 biodivine-lib-param-bn = { version="0.7.0", features=["solver-z3", "serde"] }
 biodivine-lib-bdd = { version = "0.6.2", features = ["serde"] }
