--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ default = ['algorithms-pyo3-bindings']
 # So for CI builds, this feature is enabled, but for local builds,
 # you don't need it as long as you have Z3 installed (because your
 # build may take >30min if you enable it).
-static-z3 = ["z3/static-link-z3"]
+static-z3 = ["z3/bundled"]
 
 # Feature flag that enables Python bindings for the algorithms module
 algorithms-pyo3-bindings = []
