build: Updating Z3 dependency for static builds.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,14 +10,12 @@ on:
     tags:
       - '*'
 env:
-  # A fixed version used for testing, so that the builds don't
+  # A fixed version used for testing so that the builds don't
   # spontaneously break after a few years.
   # Make sure to update this from time to time.
   RUST_VERSION: "1.90.0"
   # This is the version currently used by `z3-sys`.
-  # If this ever changes, you might also need to increase
-  # the minimum macOS version below.
-  Z3_VERSION: "4.15.2"
+  Z3_VERSION: "4.15.4"
   MACOS_TARGET: "11.0"
   PYTHON_VERSION: "3.12"
 
