--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ default = ['algorithms-pyo3-bindings']
 # So for CI builds, this feature is enabled, but for local builds,
 # you don't need it as long as you have Z3 installed (because your
 # build may take >30min if you enable it).
-static-z3 = ["z3/gh-release"]
+static-z3 = ["z3/bundled"]
 
 # Feature flag that enables Python bindings for the algorithms module
 algorithms-pyo3-bindings = []
@@ -28,7 +28,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 regex = "1.12"
 pyo3 = { version = "0.27", features = ["abi3-py37", "extension-module", "num-bigint", "py-clone"] }
-biodivine-lib-param-bn = { version="0.7.1", features=["solver-z3", "serde"] }
+biodivine-lib-param-bn = { version="0.7.2", features=["solver-z3", "serde"] }
 biodivine-lib-bdd = { version = "0.6.2", features = ["serde"] }
 #biodivine-pbn-control = "0.3.1"
 biodivine-pbn-control = { git = "https://github.com/sybila/biodivine-pbn-control", rev = "9e31bab9d000266ea25c35cc752c69077973d43c" }
@@ -51,7 +51,7 @@ pyo3-log = "0.13"
 # Include Z3 dependencies as strictly as possible, we don't want
 # this to change because it might break our release builds.
 # Cannot update `z3` because this version is used by lib-param-bn.
-z3="^0.18.2"
+z3="^0.19.7"
 
 [build-dependencies]
 pyo3-build-config = "0.27"
