--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ default = ['algorithms-pyo3-bindings']
 # So for CI builds, this feature is enabled, but for local builds,
 # you don't need it as long as you have Z3 installed (because your
 # build may take >30min if you enable it).
-static-z3 = ["z3/bundled"]
+static-z3 = ["z3/bundled", "z3-sys/bundled", "z3-sys/reqwest-native-tls-vendored"]
 
 # Feature flag that enables Python bindings for the algorithms module
 algorithms-pyo3-bindings = []
@@ -52,6 +52,7 @@ pyo3-log = "0.13"
 # this to change because it might break our release builds.
 # Cannot update `z3` because this version is used by lib-param-bn.
 z3="^0.19.7"
+z3-sys = "0.10.4"
 
 [build-dependencies]
 pyo3-build-config = "0.27"
