--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,12 +1,11 @@
-# This runs on every commit that is not on a dev-* branch. It should be reasonably fast,
-# as it links to Z3 dynamically.
+# This runs on every commit that is not on a dev-* branch.
 # Specifically, we check that:
-#  - Rust formatting is correct.
-#  - Rust project has no errors.
-#  - Rust project has no `clippy` issues.
+#  - the Rust formatting is correct.
+#  - the Rust project has no errors.
+#  - the Rust project has no `clippy` issues.
 #  - Python tests have no `mypy` issues.
 #  - Everything compiles and tests pass on linux/macOS/windows with dynamically linked Z3.
-#    * On macOS, we also measure code coverage of the Python tests (on linux this seems broken now).
+#    * On macOS, we also measure code coverage of the Python tests (on Linux this seems broken now).
 name: test
 on:
   push:
@@ -16,15 +15,10 @@ on:
     branches:
       - '*'
 env:
-  # A fixed version used for testing, so that the builds don't
+  # A fixed version used for testing so that the builds don't
   # spontaneously break after a few years.
   # Make sure to update this from time to time.
   RUST_VERSION: "1.90.0"
-  # This is the version currently used by `z3-sys`.
-  # If this ever changes, you might also need to increase
-  # the minimum macOS version below.
-  Z3_VERSION: "4.15.4"
-  MACOS_TARGET: "11.0"
   PYTHON_VERSION: "3.12"
 
 jobs:
@@ -42,7 +36,7 @@ jobs:
           components: rustfmt
       - run: cargo fmt --all -- --check
 
-  # Run basic code validity check.
+  # Run a basic code validity check.
   check:
     needs: fmt
     name: check
@@ -51,14 +45,6 @@ jobs:
       RUSTFLAGS: "-D warnings"
     steps:
       - uses: actions/checkout@v4
-      - name: Setup Z3.
-        id: z3
-        uses: cda-tum/setup-z3@v1
-        with:
-          version: ${{ env.Z3_VERSION }}
-          add_to_library_path: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - uses: dtolnay/rust-toolchain@stable
         with:
           toolchain: ${{ env.RUST_VERSION }}
@@ -73,14 +59,6 @@ jobs:
       RUSTFLAGS: "-D warnings"
     steps:
       - uses: actions/checkout@v4
-      - name: Setup Z3.
-        id: z3
-        uses: cda-tum/setup-z3@v1
-        with:
-          version: ${{ env.Z3_VERSION }}
-          add_to_library_path: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - uses: dtolnay/rust-toolchain@stable
         with:
           toolchain: ${{ env.RUST_VERSION }}
@@ -95,14 +73,6 @@ jobs:
     steps:
       - name: Checkout.
         uses: actions/checkout@v4
-      - name: Setup Z3.
-        id: z3
-        uses: cda-tum/setup-z3@v1
-        with:
-          version: ${{ env.Z3_VERSION }}
-          add_to_library_path: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Setup Python.
         uses: actions/setup-python@v5
         with:
@@ -133,14 +103,6 @@ jobs:
     steps:
       - name: Checkout.
         uses: actions/checkout@v4
-      - name: Setup Z3.
-        id: z3
-        uses: cda-tum/setup-z3@v1
-        with:
-          version: ${{ env.Z3_VERSION }}
-          add_to_library_path: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Setup Python.
         uses: actions/setup-python@v5
         with:
@@ -164,14 +126,6 @@ jobs:
     steps:
       - name: Checkout.
         uses: actions/checkout@v4
-      - name: Setup Z3.
-        id: z3
-        uses: cda-tum/setup-z3@v1
-        with:
-          version: ${{ env.Z3_VERSION }}
-          add_to_library_path: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Setup Python.
         uses: actions/setup-python@v5
         with:
@@ -206,14 +160,6 @@ jobs:
       # since we are only testing, not building multiplatform `wheel` files.
       - name: Checkout.
         uses: actions/checkout@v4
-      - name: Setup Z3.
-        id: z3
-        uses: cda-tum/setup-z3@v1
-        with:
-          version: ${{ env.Z3_VERSION }}
-          add_to_library_path: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Setup Python.
         uses: actions/setup-python@v5
         with:
@@ -248,14 +194,6 @@ jobs:
     steps:
       - name: Checkout.
         uses: actions/checkout@v4
-      - name: Setup Z3.
-        id: z3
-        uses: cda-tum/setup-z3@v1
-        with:
-          version: ${{ env.Z3_VERSION }}
-          add_to_library_path: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Setup Python.
         uses: actions/setup-python@v5
         with:
