--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -13,10 +13,11 @@ build:
 
 requirements:
   build:
-    - {{ compiler('c') }}    
+    - {{ compiler('c') }}
+    - {{ compiler('cxx') }}
+    - rust
   host:
     - pip
-    - rust
     - maturin
     - python    
   run:
