--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,8 +18,8 @@ env:
   # A fixed version used for testing so that the builds don't
   # spontaneously break after a few years.
   # Make sure to update this from time to time.
-  RUST_VERSION: "1.90.0"
-  PYTHON_VERSION: "3.12"
+  RUST_VERSION: "1.93.0"
+  PYTHON_VERSION: "3.14"
 
 jobs:
   # Checks syntax formatting (does not need z3).
@@ -99,7 +99,7 @@ jobs:
       matrix:
         # Linux builds run with all supported versions of python. Other
         # operating systems just run the latest recommended version.
-        python: ["3.9", "3.10", "3.11", "3.12"]
+        python: ["3.9", "3.10", "3.11", "3.12", "3.13", "3.14"]
     steps:
       - name: Checkout.
         uses: actions/checkout@v4
