--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -118,14 +118,13 @@ jobs:
           python-version: ${{ matrix.python }}
           environment-file: conda_env.yaml
           auto-update-conda: false
-          auto-activate-base: false
           show-channel-urls: true
       - name: Build and upload the conda packages
         uses: uibcdf/action-build-and-upload-conda-packages@v1.5.0
         with:
-          python-version: ${{ matrix.python }}
           meta_yaml_dir: "conda"
+          upload: true
+          overwrite: true
           user: daemontus
           label: main
-          overwrite: false
           token: ${{ secrets.ANACONDA_TOKEN }}
